@@ -1,22 +1,35 @@
 package com.googlecode.jmeter.plugins.webdriver.config;
 
-import org.apache.commons.lang3.StringUtils;
-import org.apache.jorphan.logging.LoggingManager;
-import org.apache.log.Logger;
-import org.openqa.selenium.Capabilities;
-import org.openqa.selenium.chrome.ChromeOptions;
-import org.openqa.selenium.remote.*;
+import static com.googlecode.jmeter.plugins.webdriver.config.RemoteCapability.CHROME;
+import static com.googlecode.jmeter.plugins.webdriver.config.RemoteCapability.FIREFOX;
+import static com.googlecode.jmeter.plugins.webdriver.config.RemoteCapability.INTERNET_EXPLORER;
 
 import java.net.MalformedURLException;
 import java.net.URL;
 
-import static com.googlecode.jmeter.plugins.webdriver.config.RemoteCapability.CHROME;
+import org.apache.commons.lang3.StringUtils;
+import org.openqa.selenium.Capabilities;
+import org.openqa.selenium.chrome.ChromeOptions;
+import org.openqa.selenium.chromium.ChromiumOptions;
+import org.openqa.selenium.firefox.FirefoxDriver;
+import org.openqa.selenium.firefox.FirefoxOptions;
+import org.openqa.selenium.firefox.FirefoxProfile;
+import org.openqa.selenium.ie.InternetExplorerOptions;
+import org.openqa.selenium.remote.AbstractDriverOptions;
+import org.openqa.selenium.remote.CapabilityType;
+import org.openqa.selenium.remote.DesiredCapabilities;
+import org.openqa.selenium.remote.FileDetector;
+import org.openqa.selenium.remote.RemoteWebDriver;
+import org.openqa.selenium.remote.UselessFileDetector;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 public class RemoteDriverConfig extends WebDriverConfig<RemoteWebDriver> {
 
 	private static final long serialVersionUID = 100L;
 	private static final String REMOTE_SELENIUM_GRID_URL = "RemoteDriverConfig.general.selenium.grid.url";
 	private static final String REMOTE_CAPABILITY = "RemoteDriverConfig.general.selenium.capability";
+	private static final String EDGE_SERVICE_PATH = "RemoteDriverConfig.ie.edgedriver_path";
 	private static final String REMOTE_FILE_DETECTOR = "RemoteDriverConfig.general.selenium.file.detector";
 	private static final String HEADLESS_ENABLED = "RemoteDriverConfig.chrome.headless_enabled";
 	//adding options especially for selenoid
@@ -25,32 +38,44 @@ public class RemoteDriverConfig extends WebDriverConfig<RemoteWebDriver> {
 	private static final String LOG_ENABLED = "RemoteDriverConfig.chrome.log_enabled";
 	private static final String BROWSER_MAXIMIZE = "RemoteDriverConfig.chrome.browser.maximize";
 
-	private static final Logger LOGGER = LoggingManager.getLoggerForClass();
+	private static final Logger LOGGER = LoggerFactory.getLogger(RemoteDriverConfig.class);
 
 	Capabilities createCapabilities() {
-		DesiredCapabilities capabilities = RemoteDesiredCapabilitiesFactory.build(getCapability());
-		capabilities.setCapability(CapabilityType.PROXY, createProxy());
-		capabilities.setJavascriptEnabled(true);
-
-		if (getCapability().equals(CHROME) && isHeadlessEnabled()) {
-			final ChromeOptions chromeOptions = new ChromeOptions();
-			chromeOptions.addArguments("--headless");
-			capabilities.setCapability(ChromeOptions.CAPABILITY, chromeOptions);
+		AbstractDriverOptions caps = null;
+		switch(getCapability()) {
+		case CHROME:
+			caps = new ChromeOptions();
+			if (isHeadlessEnabled()) {
+				((ChromiumOptions<ChromeOptions>) caps).addArguments("--headless");
+			} else {
+				if(isBrowserMaximized())
+					((ChromiumOptions<ChromeOptions>) caps).addArguments("--start-maximized");
+				if(isLogEnabled())
+					caps.setCapability("enableLog",true);
+				if(isVideoEnabled())
+					caps.setCapability("enableVideo",true);
+				if(isVNCEnabled())
+					caps.setCapability("enableVNC",true);
+			}
+			break;
+		case FIREFOX:
+			caps = new FirefoxOptions();
+			((FirefoxOptions) caps).setProfile(new FirefoxProfile());
+			break;
+		case INTERNET_EXPLORER:
+			// Settings to launch Microsoft Edge in IE mode
+			caps = new InternetExplorerOptions();
+			((InternetExplorerOptions) caps).attachToEdgeChrome();
+			((InternetExplorerOptions) caps).withEdgeExecutablePath(getMsEdgeDriverPath());
+			((InternetExplorerOptions) caps).ignoreZoomSettings();
+			// Set an initial valid page otherwise IeDriver hangs on page load...
+			((InternetExplorerOptions) caps).withInitialBrowserUrl("http://www.bing.com");
+			break;
+		default:
+			throw new IllegalArgumentException("No such capability");
 		}
-		else if (getCapability().equals(CHROME)) {
-			final ChromeOptions chromeOptions = new ChromeOptions();
-			if(isBrowserMaximized())
-				chromeOptions.addArguments("--start-maximized");
-			if(isLogEnabled())
-				chromeOptions.setCapability("enableLog",true);
-			if(isVideoEnabled())
-				chromeOptions.setCapability("enableVideo",true);
-			if(isVNCEnabled())
-				chromeOptions.setCapability("enableVNC",true);
-			capabilities.setCapability(ChromeOptions.CAPABILITY, chromeOptions);
-		}
-
-		return capabilities;
+		caps.setProxy(createProxy());
+		return caps;
 	}
 
 	@Override
@@ -81,6 +106,14 @@ public class RemoteDriverConfig extends WebDriverConfig<RemoteWebDriver> {
 		setProperty(REMOTE_CAPABILITY, selectedCapability.name());
 	}
 
+    public void setMsEdgeDriverPath(String path) {
+        setProperty(EDGE_SERVICE_PATH, path);
+    }
+
+    public String getMsEdgeDriverPath() {
+        return getPropertyAsString(EDGE_SERVICE_PATH);
+    }
+
 	public FileDetectorOption getFileDetectorOption() {
 		String fileDetectorString = getPropertyAsString(REMOTE_FILE_DETECTOR);
 		if (StringUtils.isBlank(fileDetectorString)) {
@@ -96,7 +129,7 @@ public class RemoteDriverConfig extends WebDriverConfig<RemoteWebDriver> {
 
 	protected FileDetector createFileDetector() {
 		try {
-			return getFileDetectorOption().getClazz().newInstance();
+			return getFileDetectorOption().getClazz().getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			LOGGER.warn("Cannot create a file detector of type " + getFileDetectorOption().getClazz().getCanonicalName() + ", reverting to default of useless file detector");
 			return new UselessFileDetector();
