@@ -1,5 +1,6 @@
 package com.googlecode.jmeter.plugins.webdriver.sampler;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 
 import javax.script.Bindings;
@@ -15,8 +16,8 @@ import org.apache.jmeter.samplers.SampleResult;
 import org.apache.jmeter.threads.JMeterContext;
 import org.apache.jmeter.threads.JMeterContextService;
 import org.apache.jmeter.util.JMeterUtils;
-import org.apache.jorphan.logging.LoggingManager;
-import org.apache.log.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.openqa.selenium.WebDriver;
 
 import com.googlecode.jmeter.plugins.webdriver.config.WebDriverConfig;
@@ -33,7 +34,7 @@ public class WebDriverSampler extends AbstractSampler {
     private static final long serialVersionUID = 100L;
     public static final String SCRIPT = "WebDriverSampler.script";
     public static final String PARAMETERS = "WebDriverSampler.parameters";
-    private static final Logger LOGGER = LoggingManager.getLoggerForClass();
+    private static final Logger LOGGER = LoggerFactory.getLogger(WebDriverSampler.class);
     public static final String DEFAULT_ENGINE = "javascript";
     public static final String SCRIPT_LANGUAGE = "WebDriverSampler.language";
     private final transient ScriptEngineManager scriptEngineManager;
@@ -62,16 +63,28 @@ public class WebDriverSampler extends AbstractSampler {
             throw new IllegalArgumentException("Browser has not been configured.  Please ensure at least 1 WebDriverConfig is created for a ThreadGroup.");
         }
 
-        SampleResult res;
+        SampleResult res = null;
         try {
-            res = sampleResultClass.newInstance();
+            res = sampleResultClass.getDeclaredConstructor().newInstance();
         } catch (InstantiationException e1) {
             LOGGER.warn("Class " + sampleResultClass + " failed to instantiate, defaulted to " + SampleResult.class.getCanonicalName(), e1);
             res = new SampleResult();
         } catch (IllegalAccessException e1) {
             LOGGER.warn("Class " + sampleResultClass + " failed to instantiate, defaulted to " + SampleResult.class.getCanonicalName(), e1);
             res = new SampleResult();
-        }
+        } catch (IllegalArgumentException e1) {
+            LOGGER.warn("Class " + sampleResultClass + " failed to instantiate, defaulted to " + SampleResult.class.getCanonicalName(), e1);
+            res = new SampleResult();
+		} catch (InvocationTargetException e1) {
+            LOGGER.warn("Class " + sampleResultClass + " failed to instantiate, defaulted to " + SampleResult.class.getCanonicalName(), e1);
+            res = new SampleResult();
+		} catch (NoSuchMethodException e1) {
+            LOGGER.warn("Class " + sampleResultClass + " failed to instantiate, defaulted to " + SampleResult.class.getCanonicalName(), e1);
+            res = new SampleResult();
+		} catch (SecurityException e1) {
+            LOGGER.warn("Class " + sampleResultClass + " failed to instantiate, defaulted to " + SampleResult.class.getCanonicalName(), e1);
+            res = new SampleResult();
+		}
         res.setSampleLabel(getName());
         res.setSamplerData(toString());
         res.setDataType(SampleResult.TEXT);
